test/classes/vass/ref-like-intents/out-superclass.good
out-superclass.chpl:13: error: unresolved call 'procOutD(unmanaged C)'
out-superclass.chpl:6: note: candidates are: procOutD(out arg: unmanaged D)
